# FTF

./: CMakeLists.txt  README.md  build_opencv.sh
conf/: HM-fd .conf  MF-fd.conf  NLM-fd.conf  WF-fd.conf
img/: noisyImg-4096.tif  noisyImg-8192.tif
include/: DisplayImage.hpp
include/CImg/plugins/: cvMat.h
src/: DisplayImage.cpp  HarmonicMean.cpp  MedianFilter.cpp  NonLocalMeans.cpp  WienerFilter.cpp
